# Sazava

docs/: Algoritm vizualizaçii.txt  Matematiceskoje obosnovanije.txt  vvedenije.txt
src/: Assert.hpp  CMakeLists.txt  CSGDataGPU.cpp  CSGDataGPU.hpp  CSGExpressionGPU.cpp  CSGExpressionGPU.hpp  CSGExpressionTree.hpp  CSGExpressionTreeLowLevel.cpp  CSGExpressionTreeLowLevel.hpp  CSGRenderer.cpp  CSGRenderer.hpp  CSGRendererPerSurface.cpp  CSGRendererPerSurface.hpp  CSGRendererStraightforward.cpp  CSGRendererStraightforward.hpp  CameraController.cpp  CameraController.hpp  Host.cpp  Host.hpp  I_CSGRenderer.hpp  Log.cpp  SystemEvent.cpp  SystemEvent.hpp  SystemWindow.cpp  SystemWindow.hpp  Tonemapper.cpp  Tonemapper.hpp  Vec.hpp  WindowVulkan.cpp  WindowVulkan.hpp  main.cpp
src/Lib/: CMakeLists.txt  CSGDataGPU.cpp  CSGDataGPU.hpp  CSGExpressionTree.hpp  CSGExpressionTreeLowLevel.cpp  CSGExpressionTreeLowLevel.hpp  CSGRenderer.cpp  CSGRenderer.hpp  CameraController.cpp  CameraController.hpp  I_WindowVulkan.hpp  Log.cpp  Log.hpp  Mat.cpp  Mat.hpp  SelectionRenderer.cpp  SelectionRenderer.hpp  Tonemapper.cpp  Tonemapper.hpp
src/Lib/shaders/: blur.frag.glsl  blur.vert.glsl  selection_box.frag.glsl  selection_box.vert.glsl  surface.frag.glsl  tonemapping.frag.glsl  tonemapping.vert.glsl
src/QtEditor/: CMakeLists.txt  CSGNodesTreeWidget.cpp  CSGNodesTreeWidget.hpp  CSGTreeModel.cpp  CSGTreeModel.hpp  CSGTreeNodeEditWidget.cpp  CSGTreeNodeEditWidget.hpp  CentralWidget.hpp  CentralWidgetQtVulkan.cpp  CentralWidgetSDLVulkan.cpp  NewNodeListWidget.cpp  NewNodeListWidget.hpp  Serialization.cpp  Serialization.hpp  main.cpp
src/SDL2Viewer/: CMakeLists.txt  Host.hpp  SystemWindow.cpp  WindowVulkan.cpp  main.cpp
src/SDL2ViewerLib/: CMakeLists.txt  Host.cpp  Host.hpp  SystemWindow.hpp  WindowVulkan.cpp  WindowVulkan.hpp
src/shaders/: main.frag.glsl  main.vert.glsl  surface.frag.glsl  surface.vert.glsl  tonemapping.frag.glsl  tonemapping.vert.glsl
